force-app/main/default/objects/Dictionary__c/Dictionary__c.object-meta.xml
<CustomObject>
    <description>字典表</description>
    <label>Dictionary</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Dictionary  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>