force-app/main/default/objects/Dictionary__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Region</label>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Dictionary</relationshipLabel>
    <relationshipName>Dictionary</relationshipName>
    <type>Lookup</type>
</CustomField>