force-app/main/default/objects/Dictionary__c/fields/Sales_Region_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Picklist__c</fullName>
    <label>Sales Region Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Region</valueSetName>
    </valueSet>
</CustomField>