force-app/main/default/objects/Dictionary__c/fields/Store_Level__c.field-meta.xml
<CustomField>
    <fullName>Store_Level__c</fullName>
    <label>Store Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Region_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ShopLevel</valueSetName>
    </valueSet>
</CustomField>