force-app/main/default/objects/Dictionary__c/fields/Store_Level_HQ__c.field-meta.xml
<CustomField>
    <fullName>Store_Level_HQ__c</fullName>
    <label>Store Level（HQ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>